--- a/404.html
+++ b/404.html
@@ -1,1 +1,25 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Page Not Found - Cookie Clicker 2 Game Hub</title>
+  <link rel="icon" href="/assets/favicon.png">
+  <meta name="robots" content="noindex,follow">
+  <link rel="stylesheet" href="/assets/css/style.css">
+</head>
+<body>
+  <main style="max-width: 600px; margin: 80px auto; text-align: center;">
+    <h1>404 - Page Not Found</h1>
+    <p>Oops! The page you are looking for does not exist.</p>
+    <p>
+      <a href="/">Back to Home</a> ·
+      <a href="/clicker.games">Clicker Games</a> ·
+      <a href="/idle.games">Idle Games</a> ·
+      <a href="/io.games">IO Games</a> ·
+      <a href="/hot.games">Hot Games</a>
+    </p>
+  </main>
+</body>
+</html>
 
