--- a/cookie-clicker-2.html
+++ b/cookie-clicker-2.html
@@ -1,1 +1,200 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Cookie Clicker 2 - Play Online Free Clicker Game</title>
+
+  <!-- Favicon -->
+  <link rel="icon" href="/assets/favicon.png">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://cookieclicker-2-game.github.io/cookie-clicker-2/">
+
+  <!-- Google Search Console verify -->
+  <!-- TODO: GSC verify meta here -->
+  <meta name="google-site-verification" content="gwZJI-NhnCxE4bHlp8M6Vso-5kjf-jGVusAkQ6-KGoE">
+
+  <!-- Meta description -->
+  <meta name="description" content="Play Cookie Clicker 2 online and build the most powerful cookie factory. Tap, upgrade, and idle your way to billions of cookies in this addictive clicker game.">
+
+  <!-- Meta robots -->
+  <meta name="robots" content="index,follow">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Cookie Clicker 2 - Play Online Free Clicker Game">
+  <meta property="og:description" content="Play Cookie Clicker 2 online and build the most powerful cookie factory. Tap, upgrade, and idle your way to billions of cookies in this addictive clicker game.">
+  <meta property="og:url" content="https://cookieclicker-2-game.github.io/cookie-clicker-2/">
+  <meta property="og:image" content="https://cookieclicker-2-game.github.io/assets/thumbs/cookie-clicker-2.png">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Cookie Clicker 2 - Play Online Free Clicker Game">
+  <meta name="twitter:description" content="Play Cookie Clicker 2 online and build the most powerful cookie factory. Tap, upgrade, and idle your way to billions of cookies in this addictive clicker game.">
+  <meta name="twitter:image" content="https://cookieclicker-2-game.github.io/assets/thumbs/cookie-clicker-2.png">
+
+  <!-- TODO: GA4 script here -->
+
+  <!-- Global CSS -->
+  <link rel="stylesheet" href="/assets/css/style.css">
+</head>
+<body data-slug="cookie-clicker-2" data-primary-category="clicker">
+  <!-- Header chung (giống index) -->
+  <header class="site-header">
+    <div class="site-header-inner">
+      <a href="/" class="site-logo">
+        <div class="site-logo-icon">🍪</div>
+        <span>CookieGames</span>
+      </a>
+
+      <nav class="site-nav" aria-label="Main navigation">
+        <a href="/clicker.games" class="nav-link active">
+          <span class="dot"></span><span>Game Clicker</span>
+        </a>
+        <a href="/idle.games" class="nav-link">
+          <span class="dot"></span><span>Game Idle</span>
+        </a>
+        <a href="/io.games" class="nav-link">
+          <span class="dot"></span><span>Game IO</span>
+        </a>
+        <a href="/hot.games" class="nav-link">
+          <span class="dot"></span><span>Game Hot</span>
+        </a>
+      </nav>
+
+      <div class="header-right">
+        <div class="search-wrapper" id="searchWrapper">
+          <span class="search-icon">🔍</span>
+          <input
+            type="search"
+            id="searchInput"
+            class="search-input"
+            placeholder="Tìm game..."
+            autocomplete="off"
+          >
+          <div id="searchResults" class="search-results" aria-label="Search results"></div>
+        </div>
+
+        <button id="themeToggle" class="theme-toggle" type="button">
+          <span class="icon">🌙</span>
+          <span>Theme</span>
+        </button>
+      </div>
+    </div>
+  </header>
+
+  <main class="page-container">
+    <div class="layout">
+      <!-- Cột trái -->
+      <section class="main-content">
+        <nav id="breadcrumb" class="breadcrumb" aria-label="Breadcrumb">
+          <!-- TODO: JS sẽ render Home > Clicker Games > Cookie Clicker 2 -->
+        </nav>
+
+        <article class="card">
+          <header class="game-header">
+            <h1 class="game-title">Cookie Clicker 2</h1>
+            <div class="game-meta">
+              <span>🍪 <strong>12,340</strong> plays</span>
+              <span>⭐ 4.8 / 5.0</span>
+              <span>Category: Clicker · Idle</span>
+            </div>
+          </header>
+
+          <div class="game-frame-wrapper" style="margin-top: 12px;">
+            <div class="game-frame-inner">
+              <iframe
+                src="/embed/cookie-clicker-2/index.html"
+                class="game-frame"
+                title="Cookie Clicker 2"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
+
+          <div class="game-actions">
+            <button type="button" class="btn btn-primary" id="btnComment">
+              <span class="icon">💬</span>
+              <span>Bình luận</span>
+            </button>
+            <button type="button" class="btn btn-ghost" id="btnShare">
+              <span class="icon">🔗</span>
+              <span>Chia sẻ</span>
+            </button>
+            <button type="button" class="btn btn-ghost" id="btnFullscreen">
+              <span class="icon">⛶</span>
+              <span>Phóng to</span>
+            </button>
+          </div>
+        </article>
+
+        <section class="card" style="margin-top: 14px;">
+          <h2 class="section-title">Clicker games giống Cookie Clicker 2</h2>
+          <div id="clickerGrid" class="game-grid">
+            <!-- TODO: sẽ render bằng JS từ GAMES -->
+          </div>
+        </section>
+
+        <section class="card game-description" style="margin-top: 14px;">
+          <h2>Introduction to Cookie Clicker 2</h2>
+          <p>
+            Cookie Clicker 2 is an upgraded version of the classic idle clicker game. Start with a
+            single cookie, then build a full empire of bakeries, factories, and bizarre cookie
+            machines that work for you even while you are away.
+          </p>
+
+          <h2>How to Play Cookie Clicker 2</h2>
+          <p>
+            Click on the giant cookie to earn cookies, then spend them on auto-clickers, grandmas,
+            farms, mines, and more. Each new building multiplies your cookie production and unlocks
+            new upgrades to keep the numbers climbing.
+          </p>
+
+          <h2>Tips and Strategies</h2>
+          <ul>
+            <li>Always buy the most efficient upgrade per cookie spent.</li>
+            <li>Use idle time to let your automatic buildings work for you.</li>
+            <li>Experiment with different upgrade paths to find the fastest growth.</li>
+          </ul>
+
+          <h2>Similar Clicker Games</h2>
+          <p>
+            Love Cookie Clicker 2? Try other clicker and idle games like Astro Robot Clicker,
+            Idle Space Business Tycoon, or Brainrot Craft to keep your idle strategy skills sharp.
+          </p>
+        </section>
+      </section>
+
+      <!-- Cột phải: Hot games -->
+      <aside class="sidebar">
+        <section class="card">
+          <h2 class="sidebar-title">Game hot</h2>
+          <div id="hotGames" class="hot-list">
+            <!-- TODO: sẽ render bằng JS getHotGames(8) -->
+          </div>
+        </section>
+      </aside>
+    </div>
+  </main>
+
+  <!-- Footer chung -->
+  <footer class="site-footer">
+    <div class="site-footer-inner">
+      <div>
+        © <span data-year></span> Cookie Clicker 2 Game Hub
+      </div>
+      <nav class="footer-links">
+        <a href="/about.html">About Us</a>
+        <a href="/contact.html">Contact Us</a>
+        <a href="/privacy-policy.html">Privacy Policy</a>
+        <a href="/terms-of-use.html">Terms of Use</a>
+        <a href="/dmca.html">DMCA</a>
+      </nav>
+    </div>
+  </footer>
+
+  <script src="/assets/js/site.js" defer></script>
+</body>
+</html>
 
