--- a/index.html
+++ b/index.html
@@ -198,6 +198,7 @@
     </div>
   </footer>
 
-  <script src="/assets/js/site.js" defer></script>
+  <script src="/assets/js/games-data.js" defer></script>
+<script src="/assets/js/site.js" defer></script>
 </body>
 </html>
