--- a/index.html
+++ b/index.html
@@ -36,6 +36,31 @@
 
   <!-- TODO: GA4 script here -->
 
+  <!-- Schema: WebSite + SearchAction + Organization -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "CookieGames - Cookie Clicker 2 Game Hub",
+    "url": "https://cookieclicker-2-game.github.io/",
+    "potentialAction": {
+      "@type": "SearchAction",
+      "target": "https://cookieclicker-2-game.github.io/?q={search_term_string}",
+      "query-input": "required name=search_term_string"
+    }
+  }
+  </script>
+
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "Organization",
+    "name": "CookieGames",
+    "url": "https://cookieclicker-2-game.github.io/",
+    "logo": "https://cookieclicker-2-game.github.io/assets/favicon.png"
+  }
+  </script>
+
   <!-- Global CSS -->
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
