--- a/clicker.games.html
+++ b/clicker.games.html
@@ -16,7 +16,7 @@
   <meta name="google-site-verification" content="gwZJI-NhnCxE4bHlp8M6Vso-5kjf-jGVusAkQ6-KGoE">
 
   <!-- Meta description -->
-  <meta name="description" content="Discover the best free clicker games like Cookie Clicker 2, Titans Clicker, and more. Tap, upgrade, and idle your way to huge numbers in our clicker game collection.">
+  <meta name="description" content="Discover the best free clicker games like Cookie Clicker 2, Titans Clicker, Sprunki Clicker Master, and more. Tap, upgrade, and idle your way to huge numbers in our clicker game collection.">
 
   <!-- Meta robots -->
   <meta name="robots" content="index,follow">
@@ -35,6 +35,50 @@
   <meta name="twitter:image" content="https://cookieclicker-2-game.github.io/assets/thumbs/cookie-clicker-2.png">
 
   <!-- TODO: GA4 script here -->
+
+  <!-- Schema: BreadcrumbList (Home > Clicker Games) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "BreadcrumbList",
+    "itemListElement": [
+      {
+        "@type": "ListItem",
+        "position": 1,
+        "name": "Home",
+        "item": "https://cookieclicker-2-game.github.io/"
+      },
+      {
+        "@type": "ListItem",
+        "position": 2,
+        "name": "Clicker Games",
+        "item": "https://cookieclicker-2-game.github.io/clicker.games"
+      }
+    ]
+  }
+  </script>
+
+  <!-- Schema: ItemList (danh sách clicker games) -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "ItemList",
+    "itemListElement": [
+      { "@type": "ListItem", "position": 1, "url": "https://cookieclicker-2-game.github.io/cookie-clicker-2.html" },
+      { "@type": "ListItem", "position": 2, "url": "https://cookieclicker-2-game.github.io/titans-clicker.html" },
+      { "@type": "ListItem", "position": 3, "url": "https://cookieclicker-2-game.github.io/duck-duck-clicker.html" },
+      { "@type": "ListItem", "position": 4, "url": "https://cookieclicker-2-game.github.io/sprunki-clicker-master.html" },
+      { "@type": "ListItem", "position": 5, "url": "https://cookieclicker-2-game.github.io/bloodmoney.html" },
+      { "@type": "ListItem", "position": 6, "url": "https://cookieclicker-2-game.github.io/dino-world-clicker.html" },
+      { "@type": "ListItem", "position": 7, "url": "https://cookieclicker-2-game.github.io/paws-antistress-clicker.html" },
+      { "@type": "ListItem", "position": 8, "url": "https://cookieclicker-2-game.github.io/cookie-clicker.html" },
+      { "@type": "ListItem", "position": 9, "url": "https://cookieclicker-2-game.github.io/the-new-steal-brainrot-super-clicker.html" },
+      { "@type": "ListItem", "position": 10, "url": "https://cookieclicker-2-game.github.io/astro-robot-clicker.html" },
+      { "@type": "ListItem", "position": 11, "url": "https://cookieclicker-2-game.github.io/chill-girl-clicker.html" },
+      { "@type": "ListItem", "position": 12, "url": "https://cookieclicker-2-game.github.io/italian-brainrot-clicker-2.html" }
+    ]
+  }
+  </script>
 
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
