--- a/contact.html
+++ b/contact.html
@@ -1,1 +1,27 @@
+<section class="card" style="margin-top: 20px;">
+  <h1>Contact Us</h1>
 
+  <p>
+    If you have questions, game suggestions, feedback, or copyright concerns, feel free to contact us
+    using the information below. We do our best to respond as quickly as possible.
+  </p>
+
+  <h2>General Inquiries</h2>
+  <p>Email: <strong>support@cookiegames.example</strong></p>
+  <p>(This is a placeholder email. Replace it with your preferred contact address.)</p>
+
+  <h2>Game Removal / Copyright Notice</h2>
+  <p>
+    If you believe that any embedded content on this website violates your rights, please submit a
+    DMCA request via the <a href="/dmca.html">DMCA page</a>. Provide all required information so we
+    can review and respond promptly.
+  </p>
+
+  <h2>Feedback & Suggestions</h2>
+  <p>
+    We welcome ideas for new games, improvements, or features. Our goal is to provide a smooth gaming
+    experience for all visitors.
+  </p>
+
+  <p>Thank you for using CookieGames!</p>
+</section>
