--- a/privacy-policy.html
+++ b/privacy-policy.html
@@ -1,1 +1,49 @@
+<section class="card" style="margin-top: 20px;">
+  <h1>Privacy Policy</h1>
+
+  <p>Last updated: January 2025</p>
+
+  <p>
+    This Privacy Policy explains how information is handled when you use
+    <strong>CookieGames</strong>, a static website hosted on GitHub Pages.
+  </p>
+
+  <h2>Information We Do Not Collect</h2>
+  <p>
+    We do <strong>not</strong> collect, store, or process any personal data.  
+    We do not require user accounts, logins, or personal submissions.
+  </p>
+
+  <h2>Cookies</h2>
+  <p>
+    CookieGames does not use tracking cookies.  
+    However, some embedded games hosted externally may use cookies as part of their operation.
+    These cookies are controlled by the respective game publishers, not by CookieGames.
+  </p>
+
+  <h2>Third-Party Content</h2>
+  <p>
+    Some pages contain iframe embeds of online games. These third-party hosts may collect usage data
+    according to their own privacy policies. We do not control or access that data.
+  </p>
+
+  <h2>Analytics</h2>
+  <p>
+    We use Google Analytics 4 (GA4) only to understand site traffic.  
+    GA4 logs general, non-personal browsing data such as pages visited, device type, and session
+    duration. No personally identifiable information (PII) is collected.
+  </p>
+
+  <h2>Changes to This Policy</h2>
+  <p>
+    We may update this Privacy Policy over time. Continued use of the site means you accept any
+    updated version.
+  </p>
+
+  <h2>Contact</h2>
+  <p>
+    For privacy questions, email us at:
+    <strong>support@cookiegames.example</strong>
+  </p>
+</section>
 
