--- a/terms-of-use.html
+++ b/terms-of-use.html
@@ -1,1 +1,53 @@
+<section class="card" style="margin-top: 20px;">
+  <h1>Terms of Use</h1>
+
+  <p>Last updated: January 2025</p>
+
+  <p>
+    By accessing <strong>CookieGames</strong>, you agree to the terms described below.  
+    If you do not agree, please discontinue use of the site.
+  </p>
+
+  <h2>1. Use of the Website</h2>
+  <p>
+    CookieGames provides free browser games for entertainment. All content is provided “as is”
+    without warranties of any kind.
+  </p>
+
+  <h2>2. Embedded Games</h2>
+  <p>
+    We host no games directly. All games are embedded via publicly available URLs.  
+    Game performance, ads, or content hosted by third parties are not controlled by us.
+  </p>
+
+  <h2>3. Intellectual Property</h2>
+  <p>
+    All game assets, characters, and trademarks belong to their respective owners.  
+    CookieGames does not claim ownership of any third-party content.
+  </p>
+
+  <h2>4. User Responsibilities</h2>
+  <ul>
+    <li>Do not attempt to hack, disrupt, or misuse the site.</li>
+    <li>Do not upload harmful scripts or automated bots.</li>
+    <li>Use the content only for personal, non-commercial enjoyment.</li>
+  </ul>
+
+  <h2>5. Limitation of Liability</h2>
+  <p>
+    CookieGames is not responsible for losses caused by third-party game hosts, outages, or errors.
+  </p>
+
+  <h2>6. Changes to the Terms</h2>
+  <p>
+    We may update these Terms of Use at any time.  
+    Continued use of the site means you accept the updated terms.
+  </p>
+
+  <h2>Contact</h2>
+  <p>
+    Questions about these terms? Contact us at  
+    <strong>support@cookiegames.example</strong>.
+  </p>
+</section>
 
