--- a/404.html
+++ b/404.html
@@ -1,25 +1,169 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <!-- ====== BASIC SEO ====== -->
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Page Not Found - Cookie Clicker 2 Game Hub</title>
+  <title>Page Not Found - CookieGames</title>
+
+  <!-- Favicon -->
   <link rel="icon" href="/assets/favicon.png">
+
+  <!-- Canonical -->
+  <link rel="canonical" href="https://cookieclicker-2-game.github.io/404.html">
+
+  <!-- Google Search Console verify -->
+  <!-- TODO: GSC verify meta here -->
+  <meta name="google-site-verification" content="gwZJI-NhnCxE4bHlp8M6Vso-5kjf-jGVusAkQ6-KGoE">
+
+  <!-- Meta description -->
+  <meta name="description" content="The page you are looking for cannot be found. Browse Cookie Clicker 2 and other free clicker, idle, and IO games on CookieGames.">
+
+  <!-- 404 page should not be indexed -->
   <meta name="robots" content="noindex,follow">
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="Page Not Found - CookieGames">
+  <meta property="og:description" content="The page you requested does not exist. Discover Cookie Clicker 2 and other free online games instead.">
+  <meta property="og:url" content="https://cookieclicker-2-game.github.io/404.html">
+  <meta property="og:image" content="https://cookieclicker-2-game.github.io/assets/thumbs/cookie-clicker-2.png">
+
+  <!-- Twitter Card -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta name="twitter:title" content="Page Not Found - CookieGames">
+  <meta name="twitter:description" content="The page you requested does not exist. Discover Cookie Clicker 2 and other free online games instead.">
+  <meta name="twitter:image" content="https://cookieclicker-2-game.github.io/assets/thumbs/cookie-clicker-2.png">
+
+  <!-- TODO: GA4 script here -->
+
   <link rel="stylesheet" href="/assets/css/style.css">
 </head>
-<body>
-  <main style="max-width: 600px; margin: 80px auto; text-align: center;">
-    <h1>404 - Page Not Found</h1>
-    <p>Oops! The page you are looking for does not exist.</p>
-    <p>
-      <a href="/">Back to Home</a> ·
-      <a href="/clicker.games">Clicker Games</a> ·
-      <a href="/idle.games">Idle Games</a> ·
-      <a href="/io.games">IO Games</a> ·
-      <a href="/hot.games">Hot Games</a>
-    </p>
+<body data-slug="404" data-primary-category="">
+  <!-- Header chung -->
+  <header class="site-header">
+    <div class="site-header-inner">
+      <a href="/" class="site-logo">
+        <div class="site-logo-icon">🍪</div>
+        <span>CookieGames</span>
+      </a>
+
+      <nav class="site-nav" aria-label="Main navigation">
+        <a href="/clicker.games" class="nav-link">
+          <span class="dot"></span><span>Game Clicker</span>
+        </a>
+        <a href="/idle.games" class="nav-link">
+          <span class="dot"></span><span>Game Idle</span>
+        </a>
+        <a href="/io.games" class="nav-link">
+          <span class="dot"></span><span>Game IO</span>
+        </a>
+        <a href="/hot.games" class="nav-link">
+          <span class="dot"></span><span>Game Hot</span>
+        </a>
+      </nav>
+
+      <div class="header-right">
+        <div class="search-wrapper" id="searchWrapper">
+          <span class="search-icon">🔍</span>
+          <input
+            type="search"
+            id="searchInput"
+            class="search-input"
+            placeholder="Tìm game..."
+            autocomplete="off"
+          >
+          <div id="searchResults" class="search-results" aria-label="Search results"></div>
+        </div>
+
+        <button id="themeToggle" class="theme-toggle" type="button">
+          <span class="icon">🌙</span>
+          <span>Theme</span>
+        </button>
+      </div>
+    </div>
+  </header>
+
+  <main class="page-container">
+    <div class="layout">
+      <!-- Cột trái: nội dung 404 -->
+      <section class="main-content">
+        <nav id="breadcrumb" class="breadcrumb" aria-label="Breadcrumb">
+          <!-- JS sẽ render: Home > 404 -->
+        </nav>
+
+        <article class="card">
+          <header class="game-header">
+            <h1 class="game-title">Page Not Found</h1>
+            <div class="game-meta">
+              <span>🚫 The page you were looking for doesn’t exist.</span>
+            </div>
+          </header>
+
+          <div style="margin-top: 16px; font-size: 14px; line-height: 1.7;">
+            <p>
+              The URL you entered may be incorrect, or the page may have been moved or removed.
+              Don’t worry — you can still enjoy plenty of clicker, idle, and IO games on
+              <strong>CookieGames</strong>.
+            </p>
+
+            <h2>Quick links</h2>
+            <ul>
+              <li>🏠 Go back to the <a href="/">home page</a>.</li>
+              <li>🍪 Play <a href="/cookie-clicker-2.html">Cookie Clicker 2</a>, our featured game.</li>
+              <li>🎮 Browse <a href="/clicker.games">Clicker Games</a> for more tap-and-upgrade titles.</li>
+              <li>🕒 Relax with <a href="/idle.games">Idle Games</a>.</li>
+              <li>⚔️ Compete in <a href="/io.games">IO Games</a>.</li>
+              <li>🔥 See what’s trending in <a href="/hot.games">Hot Games</a>.</li>
+            </ul>
+
+            <p>
+              If you reached this page from one of our internal links, please let us know via the
+              <a href="/contact.html">Contact</a> page so we can fix it.
+            </p>
+          </div>
+        </article>
+
+        <!-- Gợi ý thêm vài game clicker/idle khi 404 (tái dùng grid nếu muốn sau) -->
+        <section class="card" style="margin-top: 14px;">
+          <h2 class="section-title">Recommended games</h2>
+          <p style="font-size: 14px; line-height: 1.6; opacity: 0.95; margin-bottom: 10px;">
+            Still in the mood for gaming? Try these popular titles from our collection:
+          </p>
+          <div id="clickerGrid" class="game-grid">
+            <!-- JS: hiện tại dùng getClickerGames(12); nếu muốn riêng cho 404 có thể đổi sau -->
+          </div>
+        </section>
+      </section>
+
+      <!-- Cột phải: hot games -->
+      <aside class="sidebar">
+        <section class="card">
+          <h2 class="sidebar-title">Game hot</h2>
+          <div id="hotGames" class="hot-list">
+            <!-- JS: getHotGames(8) -->
+          </div>
+        </section>
+      </aside>
+    </div>
   </main>
+
+  <footer class="site-footer">
+    <div class="site-footer-inner">
+      <div>
+        © <span data-year></span> Cookie Clicker 2 Game Hub
+      </div>
+      <nav class="footer-links">
+        <a href="/about.html">About Us</a>
+        <a href="/contact.html">Contact Us</a>
+        <a href="/privacy-policy.html">Privacy Policy</a>
+        <a href="/terms-of-use.html">Terms of Use</a>
+        <a href="/dmca.html">DMCA</a>
+      </nav>
+    </div>
+  </footer>
+
+  <script src="/assets/js/games-data.js" defer></script>
+  <script src="/assets/js/site.js" defer></script>
 </body>
 </html>
-
