--- a/blackhole-io.html
+++ b/blackhole-io.html
@@ -1,42 +1,243 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>BlackHole.io</title>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>BlackHole.io - Play Online Free</title>
 
-    <!-- Google Analytics 4 -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-TS4TB1552X"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
-      gtag('config', 'G-TS4TB1552X');
-    </script>
+  <link rel="icon" href="/assets/favicon.png" />
+  <link rel="canonical" href="https://cookieclicker-2-game.github.io/blackhole-io.html" />
 
-    <style>
-        html, body {
-            margin: 0;
-            padding: 0;
-            height: 100%;
-            overflow: hidden;
-            background: #000;
-        }
-        iframe {
-            width: 100%;
-            height: 100%;
-            border: none;
-        }
-    </style>
+  <!-- TODO: GSC verify meta -->
+  <meta name="google-site-verification" content="gwZJI-NhnCxE4bHlp8M6Vso-5kjf-jGVusAkQ6-KGoE" />
+
+  <meta
+    name="description"
+    content="Play BlackHole.io online for free. Move your black hole around the city, swallow objects, grow bigger, and try to eat all other players."
+  />
+  <meta name="robots" content="index,follow" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="BlackHole.io - Play Online Free" />
+  <meta
+    property="og:description"
+    content="Control a hungry black hole, devour everything in sight, and dominate the arena in BlackHole.io."
+  />
+  <meta property="og:url" content="https://cookieclicker-2-game.github.io/blackhole-io.html" />
+  <meta property="og:image" content="https://cookieclicker-2-game.github.io/assets/thumbs/blackhole-io.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="BlackHole.io - Play Online Free" />
+  <meta
+    name="twitter:description"
+    content="Swallow cars, buildings, and players to become the biggest hole in BlackHole.io."
+  />
+  <meta name="twitter:image" content="https://cookieclicker-2-game.github.io/assets/thumbs/blackhole-io.png" />
+
+  <!-- GA4 -->
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TS4TB1552X"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag("js", new Date());
+    gtag("config", "G-TS4TB1552X");
+  </script>
+
+  <!-- JSON-LD Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "VideoGame",
+    "name": "BlackHole.io",
+    "image": "https://cookieclicker-2-game.github.io/assets/thumbs/blackhole-io.png",
+    "url": "https://cookieclicker-2-game.github.io/blackhole-io.html",
+    "genre": ["IO"],
+    "applicationCategory": "Game",
+    "operatingSystem": "Browser",
+    "inLanguage": "en"
+  }
+  </script>
+
+  <link rel="stylesheet" href="/assets/css/style.css" />
 </head>
-<body>
 
-    <!-- Game Embed -->
-    <iframe 
-        src="https://html5.gamedistribution.com/rvvASMiH/5b7bc271558b4b17879d715d/index.html"
-        allowfullscreen
-        allow="autoplay; fullscreen">
-    </iframe>
+<body data-slug="blackhole-io" data-primary-category="io">
+
+  <!-- HEADER -->
+  <header class="site-header">
+    <div class="site-header-inner">
+
+      <a href="/" class="site-logo">
+        <div class="site-logo-icon">🕳️</div>
+        <span>CookieGames</span>
+      </a>
+
+      <nav class="site-nav" aria-label="Main navigation">
+        <a href="/clicker.games" class="nav-link">
+          <span class="dot"></span><span>Game Clicker</span>
+        </a>
+        <a href="/idle.games" class="nav-link">
+          <span class="dot"></span><span>Game Idle</span>
+        </a>
+        <a href="/io.games" class="nav-link active">
+          <span class="dot"></span><span>Game IO</span>
+        </a>
+        <a href="/hot.games" class="nav-link">
+          <span class="dot"></span><span>Game Hot</span>
+        </a>
+      </nav>
+
+      <div class="header-right">
+        <div id="searchWrapper" class="search-wrapper">
+          <span class="search-icon">🔍</span>
+          <input
+            id="searchInput"
+            type="search"
+            class="search-input"
+            placeholder="Tìm game..."
+            autocomplete="off"
+          />
+          <div id="searchResults" class="search-results"></div>
+        </div>
+
+        <button id="themeToggle" class="theme-toggle" type="button">
+          <span class="icon">🌙</span>
+          <span>Theme</span>
+        </button>
+      </div>
+
+    </div>
+  </header>
+
+
+  <!-- MAIN -->
+  <main class="page-container">
+    <div class="layout">
+
+      <!-- MAIN CONTENT -->
+      <section class="main-content">
+
+        <nav id="breadcrumb" class="breadcrumb" aria-label="Breadcrumb"></nav>
+
+        <!-- GAME CARD -->
+        <article class="card">
+
+          <header class="game-header">
+            <h1 class="game-title">BlackHole.io</h1>
+            <div class="game-meta">
+              <span>🎮 11,230 plays</span>
+              <span>⭐ 4.6 / 5.0</span>
+              <span>Category: IO</span>
+            </div>
+          </header>
+
+          <!-- GAME FRAME -->
+          <div class="game-frame-wrapper">
+            <div class="game-frame-inner">
+              <iframe
+                src="https://blackhole-io.com/"
+                class="game-frame"
+                title="BlackHole.io"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
+
+          <!-- ACTION BUTTONS -->
+          <div class="game-actions">
+            <button id="btnComment" class="btn btn-primary">
+              <span class="icon">💬</span>
+              <span>Bình luận</span>
+            </button>
+            <button id="btnShare" class="btn btn-ghost">
+              <span class="icon">🔗</span>
+              <span>Chia sẻ</span>
+            </button>
+            <button id="btnFullscreen" class="btn btn-ghost">
+              <span class="icon">⛶</span>
+              <span>Phóng to</span>
+            </button>
+          </div>
+
+        </article>
+
+        <!-- RELATED IO GAMES -->
+        <section class="card" style="margin-top:14px;">
+          <h2 class="section-title">IO games similar to BlackHole.io</h2>
+          <div id="clickerGrid" class="game-grid"></div>
+        </section>
+
+        <!-- DESCRIPTION -->
+        <section class="card game-description" style="margin-top:14px;">
+
+          <h2>Introduction to BlackHole.io</h2>
+          <p>
+            BlackHole.io is a wildly satisfying io game where you control a tiny black hole in a busy city.
+            Your job is to swallow objects scattered around the map, grow larger, and eventually consume
+            cars, buildings, and even other players.
+          </p>
+
+          <h2>How to Play BlackHole.io</h2>
+          <p>
+            Move your black hole using mouse or touch controls. Start by eating small objects like street
+            cones and benches. As you grow, you’ll be able to swallow bigger items and even rival holes.
+            Time is limited, so eat as much as possible before the round ends to reach the top of the
+            leaderboard.
+          </p>
+
+          <h2>Tips and Strategies</h2>
+          <ul>
+            <li>In the early game, focus on clusters of small objects to grow quickly.</li>
+            <li>Once you’re big enough, head toward crowded car areas and buildings.</li>
+            <li>Use your size advantage to chase smaller players and absorb them for huge boosts.</li>
+          </ul>
+
+          <h2>Similar IO Games</h2>
+          <p>
+            If you enjoy BlackHole.io, you should also try:
+            <a href="/lolbeans.html">LOLBeans</a>,
+            <a href="/slither-io.html">Slither.io</a>,
+            <a href="/curve-rush-io.html">Curve Rush IO</a>,
+            <a href="/exploder-io.html">Exploder.io</a>,
+            and <a href="/among-us.html">Among Us</a>.
+          </p>
+
+        </section>
+
+      </section>
+
+
+      <!-- SIDEBAR HOT -->
+      <aside class="sidebar">
+        <section class="card">
+          <h2 class="sidebar-title">Game hot</h2>
+          <div id="hotGames" class="hot-list"></div>
+        </section>
+      </aside>
+
+    </div>
+  </main>
+
+
+  <!-- FOOTER -->
+  <footer class="site-footer">
+    <div class="site-footer-inner">
+      <div>© <span data-year></span> Cookie Clicker 2 Game Hub</div>
+      <nav class="footer-links">
+        <a href="/about.html">About Us</a>
+        <a href="/contact.html">Contact Us</a>
+        <a href="/privacy-policy.html">Privacy Policy</a>
+        <a href="/terms-of-use.html">Terms of Use</a>
+        <a href="/dmca.html">DMCA</a>
+      </nav>
+    </div>
+  </footer>
+
+  <script src="/assets/js/games-data.js" defer></script>
+  <script src="/assets/js/site.js" defer></script>
 
 </body>
 </html>
