--- a/lolbeans.html
+++ b/lolbeans.html
@@ -1,1 +1,243 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>LOLBeans - Play Online Free</title>
+
+  <link rel="icon" href="/assets/favicon.png" />
+  <link rel="canonical" href="https://cookieclicker-2-game.github.io/lolbeans.html" />
+
+  <!-- TODO: GSC verify meta -->
+  <meta name="google-site-verification" content="gwZJI-NhnCxE4bHlp8M6Vso-5kjf-jGVusAkQ6-KGoE" />
+
+  <meta
+    name="description"
+    content="Play LOLBeans online for free. Race through hilarious obstacle courses, dodge traps, outplay other beans, and reach the finish line first."
+  />
+  <meta name="robots" content="index,follow" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="LOLBeans - Play Online Free" />
+  <meta
+    property="og:description"
+    content="Run, jump, and slide your way through chaotic obstacle courses against online players in LOLBeans."
+  />
+  <meta property="og:url" content="https://cookieclicker-2-game.github.io/lolbeans.html" />
+  <meta property="og:image" content="https://cookieclicker-2-game.github.io/assets/thumbs/lolbeans.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="LOLBeans - Play Online Free" />
+  <meta
+    name="twitter:description"
+    content="A chaotic online race game full of traps, slippery platforms, and falling beans. Play LOLBeans now!"
+  />
+  <meta name="twitter:image" content="https://cookieclicker-2-game.github.io/assets/thumbs/lolbeans.png" />
+
+  <!-- GA4 -->
+  <!-- Google tag (gtag.js) -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TS4TB1552X"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag("js", new Date());
+    gtag("config", "G-TS4TB1552X");
+  </script>
+
+  <!-- JSON-LD Schema -->
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "VideoGame",
+    "name": "LOLBeans",
+    "image": "https://cookieclicker-2-game.github.io/assets/thumbs/lolbeans.png",
+    "url": "https://cookieclicker-2-game.github.io/lolbeans.html",
+    "genre": ["IO"],
+    "applicationCategory": "Game",
+    "operatingSystem": "Browser",
+    "inLanguage": "en"
+  }
+  </script>
+
+  <link rel="stylesheet" href="/assets/css/style.css" />
+</head>
+
+<body data-slug="lolbeans" data-primary-category="io">
+
+  <!-- HEADER -->
+  <header class="site-header">
+    <div class="site-header-inner">
+
+      <a href="/" class="site-logo">
+        <div class="site-logo-icon">🫘</div>
+        <span>CookieGames</span>
+      </a>
+
+      <nav class="site-nav" aria-label="Main navigation">
+        <a href="/clicker.games" class="nav-link">
+          <span class="dot"></span><span>Game Clicker</span>
+        </a>
+        <a href="/idle.games" class="nav-link">
+          <span class="dot"></span><span>Game Idle</span>
+        </a>
+        <a href="/io.games" class="nav-link active">
+          <span class="dot"></span><span>Game IO</span>
+        </a>
+        <a href="/hot.games" class="nav-link">
+          <span class="dot"></span><span>Game Hot</span>
+        </a>
+      </nav>
+
+      <div class="header-right">
+        <div id="searchWrapper" class="search-wrapper">
+          <span class="search-icon">🔍</span>
+          <input
+            id="searchInput"
+            type="search"
+            class="search-input"
+            placeholder="Tìm game..."
+            autocomplete="off"
+          />
+          <div id="searchResults" class="search-results"></div>
+        </div>
+
+        <button id="themeToggle" class="theme-toggle" type="button">
+          <span class="icon">🌙</span>
+          <span>Theme</span>
+        </button>
+      </div>
+
+    </div>
+  </header>
+
+
+  <!-- MAIN -->
+  <main class="page-container">
+    <div class="layout">
+
+      <!-- MAIN CONTENT -->
+      <section class="main-content">
+
+        <nav id="breadcrumb" class="breadcrumb" aria-label="Breadcrumb"></nav>
+
+        <!-- GAME CARD -->
+        <article class="card">
+
+          <header class="game-header">
+            <h1 class="game-title">LOLBeans</h1>
+            <div class="game-meta">
+              <span>🎮 12,340 plays</span>
+              <span>⭐ 4.7 / 5.0</span>
+              <span>Category: IO</span>
+            </div>
+          </header>
+
+          <!-- GAME FRAME -->
+          <div class="game-frame-wrapper">
+            <div class="game-frame-inner">
+              <iframe
+                src="https://lolbeans.io/"
+                class="game-frame"
+                title="LOLBeans"
+                allowfullscreen
+              ></iframe>
+            </div>
+          </div>
+
+          <!-- ACTION BUTTONS -->
+          <div class="game-actions">
+            <button id="btnComment" class="btn btn-primary">
+              <span class="icon">💬</span>
+              <span>Bình luận</span>
+            </button>
+            <button id="btnShare" class="btn btn-ghost">
+              <span class="icon">🔗</span>
+              <span>Chia sẻ</span>
+            </button>
+            <button id="btnFullscreen" class="btn btn-ghost">
+              <span class="icon">⛶</span>
+              <span>Phóng to</span>
+            </button>
+          </div>
+
+        </article>
+
+        <!-- RELATED IO GAMES -->
+        <section class="card" style="margin-top:14px;">
+          <h2 class="section-title">IO games similar to LOLBeans</h2>
+          <div id="clickerGrid" class="game-grid"></div>
+        </section>
+
+        <!-- DESCRIPTION -->
+        <section class="card game-description" style="margin-top:14px;">
+
+          <h2>Introduction to LOLBeans</h2>
+          <p>
+            LOLBeans is a hilarious online race game where jelly-bean characters sprint through dangerous
+            obstacle courses. Your goal is to stay ahead of the crowd, avoid deadly traps, and qualify for
+            the next round until only one bean is left standing.
+          </p>
+
+          <h2>How to Play LOLBeans</h2>
+          <p>
+            Use your keyboard to run, jump, and dive across moving platforms, swinging hammers, and slippery
+            surfaces. Each round eliminates a part of the lobby, so you need fast reactions and smart
+            positioning to survive. Reach the finish line before the cutoff or you’re out.
+          </p>
+
+          <h2>Tips and Strategies</h2>
+          <ul>
+            <li>Don’t rush blindly—sometimes waiting half a second makes obstacles much safer.</li>
+            <li>Watch other players to learn shortcut routes and safer paths.</li>
+            <li>On crowded maps, avoid the middle of the pack where chaos is highest.</li>
+          </ul>
+
+          <h2>Similar IO Games</h2>
+          <p>
+            If you enjoy LOLBeans, you may also like:
+            <a href="/among-us.html">Among Us</a>,
+            <a href="/slither-io.html">Slither.io</a>,
+            <a href="/curve-rush-io.html">Curve Rush IO</a>,
+            <a href="/exploder-io.html">Exploder.io</a>,
+            and <a href="/blackhole-io.html">BlackHole.io</a>.
+          </p>
+
+        </section>
+
+      </section>
+
+
+      <!-- SIDEBAR HOT -->
+      <aside class="sidebar">
+        <section class="card">
+          <h2 class="sidebar-title">Game hot</h2>
+          <div id="hotGames" class="hot-list"></div>
+        </section>
+      </aside>
+
+    </div>
+  </main>
+
+
+  <!-- FOOTER -->
+  <footer class="site-footer">
+    <div class="site-footer-inner">
+      <div>© <span data-year></span> Cookie Clicker 2 Game Hub</div>
+      <nav class="footer-links">
+        <a href="/about.html">About Us</a>
+        <a href="/contact.html">Contact Us</a>
+        <a href="/privacy-policy.html">Privacy Policy</a>
+        <a href="/terms-of-use.html">Terms of Use</a>
+        <a href="/dmca.html">DMCA</a>
+      </nav>
+    </div>
+  </footer>
+
+  <script src="/assets/js/games-data.js" defer></script>
+  <script src="/assets/js/site.js" defer></script>
+
+</body>
+</html>
 
