--- a/hot.games.html
+++ b/hot.games.html
@@ -1,1 +1,202 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Hot Games - Trending Online Games to Play Now</title>
+
+  <link rel="icon" href="/assets/favicon.png" />
+  <link rel="canonical" href="https://cookieclicker-2-game.github.io/hot.games" />
+
+  <!-- TODO: GSC verify meta -->
+  <meta name="google-site-verification" content="gwZJI-NhnCxE4bHlp8M6Vso-5kjf-jGVusAkQ6-KGoE" />
+
+  <meta
+    name="description"
+    content="Play the hottest online games right now. Slope 2, Steal Brainrots, Space Waves, Speed Stars, Subway Surfers Copenhagen and more trending titles."
+  />
+  <meta name="robots" content="index,follow" />
+
+  <!-- Open Graph -->
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="Hot Games - Trending Online Games to Play Now" />
+  <meta
+    property="og:description"
+    content="Discover what’s trending: arcade runners, rhythm games, drift racers, and more hot online games you can play for free."
+  />
+  <meta property="og:url" content="https://cookieclicker-2-game.github.io/hot.games" />
+  <meta property="og:image" content="https://cookieclicker-2-game.github.io/assets/thumbs/favicon.png" />
+
+  <!-- Twitter -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="Hot Games - Trending Online Games to Play Now" />
+  <meta
+    name="twitter:description"
+    content="See the most popular games on this site, updated with trending arcade, runner, and rhythm titles."
+  />
+  <meta name="twitter:image" content="https://cookieclicker-2-game.github.io/assets/thumbs/favicon.png" />
+
+  <!-- GA4 -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=G-TS4TB1552X"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){ dataLayer.push(arguments); }
+    gtag("js", new Date());
+    gtag("config", "G-TS4TB1552X");
+  </script>
+
+  <!-- Schema: ItemList for Hot games -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"ItemList",
+    "itemListElement":[
+      {"@type":"ListItem","position":1,"url":"https://cookieclicker-2-game.github.io/slope-2.html"},
+      {"@type":"ListItem","position":2,"url":"https://cookieclicker-2-game.github.io/ziggy-road.html"},
+      {"@type":"ListItem","position":3,"url":"https://cookieclicker-2-game.github.io/dancing-beat.html"},
+      {"@type":"ListItem","position":4,"url":"https://cookieclicker-2-game.github.io/steal-brainrots.html"},
+      {"@type":"ListItem","position":5,"url":"https://cookieclicker-2-game.github.io/space-waves.html"},
+      {"@type":"ListItem","position":6,"url":"https://cookieclicker-2-game.github.io/speed-stars.html"},
+      {"@type":"ListItem","position":7,"url":"https://cookieclicker-2-game.github.io/drift-hunters-2.html"},
+      {"@type":"ListItem","position":8,"url":"https://cookieclicker-2-game.github.io/subway-surfers-copenhagen.html"},
+      {"@type":"ListItem","position":9,"url":"https://cookieclicker-2-game.github.io/steal-brainrots-2.html"},
+      {"@type":"ListItem","position":10,"url":"https://cookieclicker-2-game.github.io/fnf-vs-velma-demo.html"}
+    ]
+  }
+  </script>
+
+  <!-- Schema: BreadcrumbList: Home > Hot Games -->
+  <script type="application/ld+json">
+  {
+    "@context":"https://schema.org",
+    "@type":"BreadcrumbList",
+    "itemListElement":[
+      {
+        "@type":"ListItem",
+        "position":1,
+        "name":"Home",
+        "item":"https://cookieclicker-2-game.github.io/"
+      },
+      {
+        "@type":"ListItem",
+        "position":2,
+        "name":"Hot Games",
+        "item":"https://cookieclicker-2-game.github.io/hot.games"
+      }
+    ]
+  }
+  </script>
+
+  <link rel="stylesheet" href="/assets/css/style.css" />
+</head>
+
+<body data-page-type="category" data-category="hot">
+
+  <!-- HEADER -->
+  <header class="site-header">
+    <div class="site-header-inner">
+
+      <a href="/" class="site-logo">
+        <div class="site-logo-icon">🔥</div>
+        <span>CookieGames</span>
+      </a>
+
+      <nav class="site-nav" aria-label="Main navigation">
+        <a href="/clicker.games" class="nav-link">
+          <span class="dot"></span><span>Game Clicker</span>
+        </a>
+        <a href="/idle.games" class="nav-link">
+          <span class="dot"></span><span>Game Idle</span>
+        </a>
+        <a href="/io.games" class="nav-link">
+          <span class="dot"></span><span>Game IO</span>
+        </a>
+        <a href="/hot.games" class="nav-link active">
+          <span class="dot"></span><span>Game Hot</span>
+        </a>
+      </nav>
+
+      <div class="header-right">
+        <div id="searchWrapper" class="search-wrapper">
+          <span class="search-icon">🔍</span>
+          <input
+            id="searchInput"
+            type="search"
+            class="search-input"
+            placeholder="Tìm game..."
+            autocomplete="off"
+          />
+          <div id="searchResults" class="search-results"></div>
+        </div>
+
+        <button id="themeToggle" class="theme-toggle" type="button">
+          <span class="icon">🌙</span><span>Theme</span>
+        </button>
+      </div>
+
+    </div>
+  </header>
+
+  <!-- MAIN -->
+  <main class="page-container">
+    <div class="layout">
+
+      <section class="main-content">
+
+        <nav id="breadcrumb" class="breadcrumb" aria-label="Breadcrumb"></nav>
+
+        <header class="card">
+          <h1 class="page-title">Hot Games</h1>
+          <p class="page-intro">
+            See what players are loving right now. These hot games are trending for their fast action, addictive
+            gameplay, and replay value—perfect when you want something exciting to play immediately.
+          </p>
+        </header>
+
+        <section class="card" style="margin-top:14px;">
+          <h2 class="section-title">Trending hot games</h2>
+          <div id="categoryGrid" class="game-grid"></div>
+          <div id="pagination" class="pagination"></div>
+        </section>
+
+      </section>
+
+      <aside class="sidebar">
+        <section class="card">
+          <h2 class="sidebar-title">Game hot</h2>
+          <div id="hotGames" class="hot-list"></div>
+        </section>
+      </aside>
+
+    </div>
+  </main>
+
+  <!-- FOOTER -->
+  <footer class="site-footer">
+    <div class="site-footer-inner">
+      <div>© <span data-year></span> Cookie Clicker 2 Game Hub</div>
+      <nav class="footer-links">
+        <a href="/about.html">About Us</a>
+        <a href="/contact.html">Contact Us</a>
+        <a href="/privacy-policy.html">Privacy Policy</a>
+        <a href="/terms-of-use.html">Terms of Use</a>
+        <a href="/dmca.html">DMCA</a>
+      </nav>
+    </div>
+  </footer>
+
+  <!-- JS: cập nhật canonical theo ?page= -->
+  <script>
+    (function () {
+      var link = document.querySelector('link[rel="canonical"]');
+      if (!link) return;
+      var url = window.location.href.split("#")[0];
+      link.href = url;
+    })();
+  </script>
+
+  <script src="/assets/js/games-data.js" defer></script>
+  <script src="/assets/js/site.js" defer></script>
+</body>
+</html>
 
